crates/runtime/tests/ready_state/snapshots/integration__ready_state__test_ready_state_on_load_federated_arrow_acceleration.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str
---
+---------------------+------------------------------------------------------------------------------------------+
| plan_type           | plan                                                                                     |
+---------------------+------------------------------------------------------------------------------------------+
| logical_plan        | BytesProcessedNode                                                                       |
|                     |   TableScan: federated_on_load_arrow projection=[id]                                     |
| physical_plan_error | External error: Acceleration not ready; loading initial data for federated_on_load_arrow |
+---------------------+------------------------------------------------------------------------------------------+
