crates/runtime/tests/ready_state/snapshots/integration__ready_state__test_ready_state_on_load_native_cayenne_acceleration.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str
---
+---------------------+-----------------------------------------------------------------------------------------+
| plan_type           | plan                                                                                    |
+---------------------+-----------------------------------------------------------------------------------------+
| logical_plan        | TableScan: native_on_load_cayenne projection=[id]                                       |
| physical_plan_error | External error: Acceleration not ready; loading initial data for native_on_load_cayenne |
+---------------------+-----------------------------------------------------------------------------------------+
